prometheus/05-grafana/01-grafana-headlessService.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: kube-prom
spec:
  clusterIP: "None"
  selector:
    app: grafana
  ports:
  - name: http
    port: 3000
    targetPort: 3000
