prometheus/05-grafana/03-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: kube-prom
spec:
  ingressClassName: "nginx"
  rules:
  - host: "k8s-grafana.oldxu.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-svc
            port:
              number: 3000
